--- a/index.html
+++ b/index.html
@@ -152,13 +152,11 @@
           </p>
 
           <h2 class="h1 hero-title">
-            Give Love for Saving <strong>World Animals</strong>
+            Donate Money To Save <strong>World Animals</strong>
           </h2>
 
           <p class="hero-text">
-            Sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-            suspendisse
-            ultrices gravida.
+            SafeWild is a charity organization dedicated to the protection and preservation of endangered wildlife around the world. Our mission is to rescue animals from threats like poaching, habitat destruction, and climate change, while promoting sustainable conservation efforts. Through educational programs, wildlife sanctuaries, and partnerships with local communities, SafeWild aims to create a safer future for animals in the wild. Join us in our fight to protect species at risk and ensure they thrive for generations to come. Every donation helps save an animal's life and preserve biodiversity.
           </p>
 
           <button class="btn btn-primary">
@@ -189,11 +187,10 @@
               </div>
 
               <div>
-                <h3 class="h4 item-title">Safe Shelter</h3>
+                <h3 class="h4 item-title">Shelter For Animals</h3>
 
                 <p class="item-text">
-                  Sit amet consecte adiscine
-                  eiusm temor ultrices.
+                  Our Animal Shelter is a safe haven dedicated to rescuing, rehabilitating, and rehoming abandoned, abused, and homeless animals.
                 </p>
               </div>
             </li>
@@ -204,11 +201,10 @@
               </div>
 
               <div>
-                <h3 class="h4 item-title">Safe Water</h3>
+                <h3 class="h4 item-title">Clean Water</h3>
 
                 <p class="item-text">
-                  Sit amet consecte adiscine
-                  eiusm temor ultrices.
+                  Our Clean Water for Animals initiative is focused on providing safe, accessible water sources for wildlife and domestic animals in need.
                 </p>
               </div>
             </li>
